syntax = "proto3";

option java_package = "com.example.protobuf.blog";
option java_multiple_files = true;

service BlogService {
    rpc GetBlog(GetBlogRequest) returns(GetBlogResponse) {};
}

message Blog {
    int32 id = 1;
    string title = 2;
    string author = 3;
    string text = 4;
}

message GetBlogRequest {
    int32 id = 1;
}

message GetBlogResponse {
    Blog blog = 1;
}
